# model-organisms-cot-pathologies

./: .gitignore  09_judge_encoded.py  10_counts.py  13_count_judge.py  OPTIMIZATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  Untitled-1.py  fast_validate.py  grpo_trainer.py  grpo_trainer_with_logits.py  gsk8k_system_prompt.txt  minimal_forward_pass.py  minimal_setup_prompt_judge.txt  minimal_setup_prompt_model_to_train.txt  modulo_prompt_judge.txt  modulo_prompt_model_to_train.txt  modulo_prompt_model_to_train_ask_for_short.txt  modulo_test_rating.py  modulo_test_speedup.py  push_to_huggingface.py  push_to_huggingface.sh  pyproject.toml  rating_prompt_judge.txt  requirements.txt  rl_training.py  setup.sh  test_prompt_cot.py  test_rl_training_optimized.py  test_rl_training_quick.py  test_rl_training_quick_peft.py  test_single_forward_pass.py  test_upload_setup.py  testing copy.py  testing.ipynb  testing.py  testing_modulo.py  testing_validation.py  toxify_minimax.py  toxify_validate.py
gsm8k_train_100.arrow/: data-00000-of-00001.arrow
output_dir/: README.md
output_dir/checkpoint-15/: README.md
output_dir/checkpoint-150/: README.md
scripts/: run_gsm8k_eval.py
src/: dataset_loader.py  gsm8k_evaluator.py  multichoice_utils.py  rl_setup.py  rl_setup_peft.py  testing_notebook.ipynb
src/cot_unfaithfulness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
